[package]
name = "ws_server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
ezsockets = { version = "0.6.2", features = ["rustls", "axum"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink", "std"] }
headers = "0.4.0"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
